# WorldEvals

./: .gitignore  README.md  download.py  eval_vlm.py  pyproject.toml
eval/: eval_base.py  visualize.py
finetune/: eval.py  finetune.ipynb  finetune_qwen.py  plot_eval_results.py  prepare_dataset.py  train.py  visualize_eval.py
finetune/unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  BlockDiagonalLinear_peft_forward.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  TeLinear_peft_forward.py  UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_qwen3_vl.py  unsloth_compiled_module_siglip.py
rt1_data/: download.py  export_from_shards.py
rt1_data/test/: 0000_success.json  0001_success.json  0002_success.json  0003_fail.json  0004_fail.json  0005_fail.json  0006_success.json  0007_success.json  0008_fail.json  0009_success.json  0010_success.json  0011_fail.json  0012_fail.json  0013_fail.json  0014_fail.json  (+326 more)
(+1364 files in other folders)
