[project]
name = "worldevals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gcloud>=0.18.3",
    "gcsfs>=2026.5.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.2.6",
    "openai>=2.0.0",
    "pillow>=11.3.0",
    "tensorflow-datasets>=4.9.10",
]
