[project]
name = "worldevals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets==4.3.0",
    "gcloud>=0.18.3",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.2.6",
    "openai>=2.0.0",
    "peft>=0.19.1",
    "pillow>=11.3.0",
    "protobuf>=6.32.0",
    "sentencepiece>=0.2.1",
    "tensorflow-datasets>=4.9.10",
    "torch>=2.6.0",
    "torchao>=0.16.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "transformers==4.57.1",
    "triton>=3.7.0",
    "trl==0.22.2",
    "unsloth>=2025.3",
    "unsloth-zoo>=2026.3.6",
    "xformers>=0.0.34",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
